# ibidem

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docker.yml  pypi.yml  release.yml  test.yml
docs/: index.rst
docs/releases/: backlog.rst
footnote/: __init__.py  cli.py  config.py  layout.py  rotate.py  utils.py
footnote/feature/: __init__.py  highnote.py  legacy.py  plain.py  result.py
footnote/parser/: highnote.py  plain.py  textraw.py
footnote/strategy/: __init__.py  highnote.py  plainmoving.py
footnote/strategy/moving/: finish.py  judge.py  run.py  separator.py  utils.py
ibidem/: __init__.py  cli.py  config.py  layout.py  utils.py
ibidem/feature/: highnote.py  legacy.py  plain.py  result.py
ibidem/parser/: highnote.py  plain.py  textraw.py
ibidem/strategy/: __init__.py  highnote.py  plainmoving.py
ibidem/strategy/moving/: judge.py  run.py  separator.py  utils.py
tests/: __init__.py  conftest.py  extractor.py  quality.py  test_footer.py  test_footnote.py  test_highnotes.py  test_judgement.py  test_judgement_strategy.py  test_moving.py  test_negative.py  test_utils.py  test_validate.py
tests/expected/: 100_bachelor106hc  100_diss128hc  100_diss171hc  bachelor_bachelor028  bachelor_bachelor032  bachelor_bachelor032a  bachelor_bachelor037  bachelor_bachelor039  bachelor_bachelor041a  bachelor_bachelor063  bachelor_bachelor076  bachelor_bachelor077  bachelor_bachelor078  bachelor_bachelor085  bachelor_bachelor086  bachelor_bachelor090  bachelor_bachelor101  bachelor_bachelor105  bachelor_bachelor111  bachelor_bachelor128  bachelor_bachelor241  book_book173  diss143page20  diss480p4p5  diss_diss143  diss_diss148  diss_diss170b  diss_diss172  diss_diss178  diss_diss218  diss_diss264  diss_diss273  diss_diss287  diss_diss406  diss_diss480  home_home018  home_home020  home_home021b  home_home022  home_home022b  (+13 more)
tests/fixtures/: __init__.py  footnotes.py
