[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ibidem"
version = "0.2.6"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "iamraw>=4.91.7,<5.0.0",
    "utilo>=2.109.0,<3.0.0",
    "configos>=1.0.4,<2.0.0",
    "geostrat>=1.5.1,<2.0.0",
    "konradus>=1.0.1,<2.0.0",
    "elementae>=1.0.1,<2.0.0",
    "germania>=1.32.0,<2.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "utilotest==1.0.4",
    "hoverpower==1.5.1",
    "gennex>=1.0.3,<2.0.0",
    "rawmaker==2.40.5",
    "pagenumber>=1.0.0,<2.0.0",
    "groupmes>=1.1.0,<2.0.0",
    "resinf>=1.0.4,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/ibidem"
Repository = "https://github.com/anaticulae/ibidem"

[project.scripts]
footnote = "ibidem.cli:main"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "ibidem",
    "ibidem.feature",
    "ibidem.parser",
    "ibidem.strategy",
    "ibidem.strategy.moving",
]
exclude = [
    "tests*",
]

[tool.hoverpower]
packages = [
    "BACHELOR",
    "BOOK",
    "DISS",
    "DOCU",
    "HOME",
    "MASTER",
    "ORDER",
    "ORDER",
    "PAPER",
    "TECH",
]
